# dashboard_ldt_back

./: .gitignore  create_tables.py  pyproject.toml  requirements.txt  test_connection.py  thunder-collection.json  vercel.json
api/: __init__.py  index.py
app/: database.py  main.py
app/core/: config.py  security.py
app/database/: __init__.py
app/db/: supabase.py
app/dependencies/: auth.py
app/integrations/: storage.py  supabase_auth.py  supabase_client.py
app/models/: __init__.py  alumno.py  bolsa.py  estado.py  historial_estado.py  maestro.py  observacion.py  person_role.py  persona.py  profile.py  role.py  tarjeta.py
app/routes/: actividad.py  alumnos.py  auth.py  bolsas.py  config.py  dashboard.py  estados.py  maestros.py  personas.py
app/schemas/: __init__.py  alumno.py  auth.py  bolsa.py  estado.py  historial_estado.py  maestro.py  observacion.py  person_role.py  persona.py  profile.py  role.py  tarjeta.py
app/services/: auth_service.py  estado_service.py
