[project]
name = "iglesia-lmdt"
version = "0.1.0"
description = "API Backend para Iglesia LMDT"
authors = [
    {name = "Admin"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (==0.128.4)",
    "uvicorn (==0.40.0)",
    "sqlalchemy (==2.0.46)",
    "psycopg2-binary (==2.9.11)",
    "pydantic (==2.12.5)",
    "pydantic-settings (==2.12.0)",
    "python-dotenv (==1.2.1)",
    "python-jose (==3.5.0)",
    "passlib (==1.7.4)",
    "bcrypt (==4.2.0)",
    "supabase (==1.2.0)",
    "email-validator (==2.3.0)",
    "httpx (==0.24.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
